# task_9

./: README.md  pyproject.toml
mlruns/0/0e5d782ebab54585ba29913c8a29118e/: meta.yaml
mlruns/0/34c4d057e8134ea28f806b260f7b484d/: meta.yaml
mlruns/0/34c4d057e8134ea28f806b260f7b484d/metrics/: accuracy
mlruns/0/c071f99b7b6849f3802608b58d29c8a1/: meta.yaml
src/trees_ml/: ModelFactory.py  data.py  params.py  pipeline.py  train.py
tests/: test_trees_ml.py
