[tool.poetry]
name = "trees_ml"
version = "0.1.0"
description = ""
authors = ["KuncevichAleksandr"]

[tool.poetry.scripts]
train = "src.trees_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
sklearn = "^0.0"
pandas = "^1.4.2"
joblib = "^1.1.0"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
